2005-04-07 Marius Mauch <genone@gentoo.org>
	* euse: fixed bugs 74344, 75525 and 84521
	* euse: add better support for cascaded profiles
	* glsa-check: use --oneshot (bug 79819)
	* glsa.py: fix stupid revision comparison bug (bug 75233)
	
2005-03-12 Aron Griffis <agriffis@gentoo.org>
	* Added eviewcvs to -dev, utility for generating viewcvs URLs

2005-03-01 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Dropped epkgmove from the -dev
	* Released gentoolkit-dev-0.2.3

2005-03-01 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Released gentookit-dev-0.2.2

2004-12-09 Marius Mauch <genone@gentoo.org>
	* glsa.py: Another stupid bug, this time revisionMatch() broke as ~foobar-rN isn't valid anymore

2004-12-08 Marius Mauch <genone@gentoo.org>
	* equery: implemented the --category option
	* glsa-check: fixed the bug where it wanted to unnecessary merge masked packages
	* glsa-check: added a check to verify that all non-option arguments are valid GLSAs
	* glsa.py: changed the outfile parameter in Glsa.dump() to outstream so we don't
	           have to open/close a file which breaks pipes
	* glsa.py: checks now for python versions below 2.3 and throws an exception

2004-11-29 Karl Trygve Kalleberg <karltk@gentoo.org>
	* branched v0-3-0: major rework in equery is in progess. the main
	branch is reserved for minor and incremental fixups.

2004-10-20 Karl Trygve Kalleberg <karltk@gentoo.org>
	* release.sh: New script that automates the relase of a new
		gentoolkit relase. Only works for gentoolkit-dev at the
		moment.
	* src/echangelog/Makefile: Fixed spurious '}'
	* Released gentoolkit-dev-0.2.1

2004-10-31 Marius Mauch <genone@gentoo.org>
	* qpkg: security fix for bug #68846

2004-10-20 Karl Trygve Kalleberg <karltk@gentoo.org>
	* etcat: fixed get_use_vars to get_use_flags, fixes #67349.

2004-10-18 Karl Trygve Kalleberg <karltk@gentoo.org>
	* gentoolkit: collapsed ChangeLog into base ChangeLog
	* gentoolkit: reverted indenting back to tabs, due to loud protests from Marius;)